# cpp-cmd-api

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
cmd-api/: CMakeLists.txt  cmd-apiConfig.cmake.in
cmd-api/include/: cmd-api.h
cmd-api/src/: cmd-api.cpp
include/: cmd-api.h
src/: cmd-api.cpp
tests/: CMakeLists.txt  longopt_basic.cpp  longopt_format_missedbar_error.cpp  longopt_format_missedendbar_error.cpp  longopt_missedarg_error.cpp  longopt_noargexpected_error.cpp  longopt_nodash_error.cpp  longopt_shortopt.cpp  longopt_shortopt_error.cpp  longopt_unknownopt_error.cpp
